--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
